--- a/app/Src/NewCamp.fx.yaml
+++ b/app/Src/NewCamp.fx.yaml
@@ -1,23 +1,20 @@
-CreateNew As screen:
+NewCamp As screen:
 
-    Form5 As form:
+    Form6 As form:
         DataSource: =NewCampaign
         DefaultMode: =FormMode.New
-        Height: =550
         NumberOfColumns: =1
-        OnFailure: =
         OnSuccess: |-
-            =SubmitForm(Form5);
+            =SubmitForm(Form6);
             Notify(
                 "Success: form was successfully saved",
                 NotificationType.Success
             );
-        Width: =846
-        X: =260
-        Y: =120
+        X: =252
+        Y: =144
         ZIndex: =1
 
-        Title_DataCard3 As typedDataCard.textualEditCard:
+        Title_DataCard5 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title"
             Default: =ThisItem.Title
@@ -27,24 +24,23 @@ CreateNew As screen:
             Height: =50
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Title")
             Required: =true
-            Update: =DataCardValue17.Text
-            Visible: =true
-            Width: =846
+            Update: =DataCardValue26.Text
+            Width: =800
             X: =0
             Y: =0
             ZIndex: =2
 
-            DataCardKey17 As label:
+            DataCardKey26 As label:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
                 Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue17.Height / 2) - (Self.Height / 2)
+                Y: =10 + (DataCardValue26.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
-            DataCardValue17 As text:
+            DataCardValue26 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 Default: =Parent.Default
                 DelayOutput: =true
@@ -57,12 +53,12 @@ CreateNew As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =656
-                X: =96
-                Y: =11
+                Width: =615
+                X: =154
+                Y: =13
                 ZIndex: =2
 
-            ErrorMessage17 As label:
+            ErrorMessage26 As label:
                 AutoHeight: =true
                 Height: =10
                 Live: =Live.Assertive
@@ -74,20 +70,20 @@ CreateNew As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue17.Y + DataCardValue17.Height
+                Y: =DataCardValue26.Y + DataCardValue26.Height
                 ZIndex: =3
 
-            StarVisible17 As label:
+            StarVisible26 As label:
                 Align: =Align.Center
-                Height: =DataCardKey17.Height
+                Height: =DataCardKey26.Height
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey17.Y
+                Y: =DataCardKey26.Y
                 ZIndex: =4
 
-        Subject_DataCard3 As typedDataCard.textualEditCard:
+        Subject_DataCard4 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Subject"
             Default: =ThisItem.Subject
@@ -97,29 +93,28 @@ CreateNew As screen:
             Height: =50
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Subject")
             Required: =false
-            Update: =DataCardValue18.Text
-            Visible: =varTabSelected = 1
-            Width: =846
+            Update: =DataCardValue27.Text
+            Width: =800
             X: =0
             Y: =1
             ZIndex: =2
 
-            DataCardKey18 As label:
+            DataCardKey27 As label:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
                 Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue18.Height / 2) - (Self.Height / 2)
+                Y: =10 + (DataCardValue27.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
-            DataCardValue18 As text:
+            DataCardValue27 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 Default: =Parent.Default
                 DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
-                Height: =35
+                Height: =38
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
@@ -127,12 +122,12 @@ CreateNew As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =618
-                X: =137
-                Y: =9
+                Width: =582
+                X: =187
+                Y: =11
                 ZIndex: =2
 
-            ErrorMessage18 As label:
+            ErrorMessage27 As label:
                 AutoHeight: =true
                 Height: =10
                 Live: =Live.Assertive
@@ -144,20 +139,20 @@ CreateNew As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue18.Y + DataCardValue18.Height
+                Y: =DataCardValue27.Y + DataCardValue27.Height
                 ZIndex: =3
 
-            StarVisible18 As label:
+            StarVisible27 As label:
                 Align: =Align.Center
-                Height: =DataCardKey18.Height
+                Height: =DataCardKey27.Height
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey18.Y
+                Y: =DataCardKey27.Y
                 ZIndex: =4
 
-        Template_DataCard3 As typedDataCard.textualEditCard:
+        Template_DataCard4 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Template"
             Default: =ThisItem.Template
@@ -167,29 +162,28 @@ CreateNew As screen:
             Height: =50
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Template")
             Required: =false
-            Update: =DataCardValue19.Text
-            Visible: =varTabSelected = 1
-            Width: =846
+            Update: =DataCardValue28.Text
+            Width: =800
             X: =0
             Y: =2
             ZIndex: =2
 
-            DataCardKey19 As label:
+            DataCardKey28 As label:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
                 Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue19.Height / 2) - (Self.Height / 2)
+                Y: =10 + (DataCardValue28.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
-            DataCardValue19 As text:
+            DataCardValue28 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 Default: =Parent.Default
                 DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
-                Height: =35
+                Height: =37
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
@@ -197,12 +191,12 @@ CreateNew As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =591
-                X: =166
-                Y: =9
+                Width: =559
+                X: =211
+                Y: =13
                 ZIndex: =2
 
-            ErrorMessage19 As label:
+            ErrorMessage28 As label:
                 AutoHeight: =true
                 Height: =10
                 Live: =Live.Assertive
@@ -214,108 +208,48 @@ CreateNew As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue19.Y + DataCardValue19.Height
+                Y: =DataCardValue28.Y + DataCardValue28.Height
                 ZIndex: =3
 
-            StarVisible19 As label:
+            StarVisible28 As label:
                 Align: =Align.Center
-                Height: =DataCardKey19.Height
+                Height: =DataCardKey28.Height
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey19.Y
+                Y: =DataCardKey28.Y
                 ZIndex: =4
 
-        "'Message (html)_DataCard2' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Message_x0028_html_x0029_"
-            Default: =ThisItem.'Message (html)'
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Message_x0028_html_x0029_")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =263
-            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
-            Required: =false
-            Update: =
-            Width: =846
-            X: =0
-            Y: =4
-            ZIndex: =2
-
-            DataCardKey20 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =162
-                Wrap: =false
-                X: =30
-                Y: =76
-                ZIndex: =1
-
-            ErrorMessage20 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =
-                ZIndex: =3
-
-            StarVisible20 As label:
-                Align: =Align.Center
-                Height: =DataCardKey20.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey20.Y
-                ZIndex: =4
-
-            RichTextEditor1 As richTextEditor:
-                Default: ="Enter some <strong>rich text</strong> here."
-                Height: =218
-                Width: =579
-                X: =180
-                Y: =10
-                ZIndex: =5
-
-        Attachments_DataCard3 As typedDataCard.attachmentsEditCard:
+        Attachments_DataCard5 As typedDataCard.attachmentsEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="{Attachments}"
             Default: =ThisItem.Attachments
             DisplayMode: =Parent.DisplayMode
             DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"{Attachments}")
             Fill: =RGBA(0, 0, 0, 0)
-            Height: =115
+            Height: =50
             Required: =false
-            Update: =DataCardValue21.Attachments
-            Visible: =varTabSelected = 1
-            Width: =846
+            Update: =DataCardValue30.Attachments
+            Width: =800
             X: =0
             Y: =3
             ZIndex: =2
 
-            DataCardKey21 As label:
+            DataCardKey30 As label:
                 AutoHeight: =true
                 Height: =34
                 Text: ="Upload file"
                 Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue21.Height / 2) - (Self.Height / 2)
+                Y: =10 + (DataCardValue30.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
-            DataCardValue21 As attachments:
+            DataCardValue30 As attachments:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 DisplayMode: =Parent.DisplayMode
-                Height: =90
+                Height: =103
                 IsInDataCard: =true
                 Items: =Parent.Default
                 PaddingBottom: =5
@@ -323,12 +257,12 @@ CreateNew As screen:
                 PaddingRight: =5
                 PaddingTop: =5
                 Tooltip: =Parent.DisplayName
-                Width: =579
-                X: =177
+                Width: =554
+                X: =216
                 Y: =10
                 ZIndex: =2
 
-            ErrorMessage21 As label:
+            ErrorMessage30 As label:
                 AutoHeight: =true
                 Height: =10
                 Live: =Live.Assertive
@@ -340,80 +274,108 @@ CreateNew As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue21.Y + DataCardValue21.Height
+                Y: =DataCardValue30.Y + DataCardValue30.Height
                 ZIndex: =3
 
-            StarVisible21 As label:
+            StarVisible30 As label:
                 Align: =Align.Center
-                Height: =DataCardKey21.Height
+                Height: =DataCardKey30.Height
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey21.Y
+                Y: =DataCardKey30.Y
                 ZIndex: =4
 
-    Gallery3_2 As gallery.galleryHorizontal:
-        Height: =52
-        Items: |-
-            =Table({ID:1,Label:"Campaigns"},{ID:2,Label:"Templates"})
-        TemplatePadding: =0
-        TemplateSize: =163
-        Width: =330
-        X: =496
-        Y: =36
-        ZIndex: =2
+        "'Message (html)_DataCard3' As typedDataCard.textualEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Message_x0028_html_x0029_"
+            Default: =ThisItem.'Message (html)'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Message_x0028_html_x0029_")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =191
+            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
+            Required: =false
+            Update: =
+            Width: =800
+            X: =0
+            Y: =4
+            ZIndex: =2
 
-        Button10_2 As button:
-            BorderThickness: =0
-            Color: |-
-                =If(varTabSelected = ThisItem.ID, White, ColorValue("#A6A6A6"))
-            DisabledBorderColor: =
-            DisabledColor: =RGBA(255, 255, 255, 1)
-            DisabledFill: |-
-                =ColorValue("#F4F4F4")
-            Fill: |-
-                =If(varTabSelected = ThisItem.ID, ColorValue("#0078D4"), ColorValue("#F4F4F4"))
-            FocusedBorderColor: =
-            FocusedBorderThickness: =
-            Height: =42
-            HoverBorderColor: =
-            HoverColor: =White
-            HoverFill: =If(varTabSelected = ThisItem.ID, ColorFade(RGBA(0, 120, 212, 1), -20%), ColorFade(RGBA(244, 244, 244, 1), -20%))
-            OnSelect: =Set(varTabSelected, ThisItem.ID)
-            PressedBorderColor: =
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: =ThisItem.Label
-            Width: =159
-            X: =4
-            Y: =3
-            ZIndex: =1
+            DataCardKey29 As label:
+                Height: =47
+                Text: =Parent.DisplayName
+                Width: =176
+                Wrap: =false
+                X: =30
+                Y: =66
+                ZIndex: =1
 
-    Button11 As button:
-        Fill: =RGBA(0, 134, 208, 1)
+            ErrorMessage29 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =ThisItem.'Comments associated with the content approval of this list item'
+                ZIndex: =3
+
+            StarVisible29 As label:
+                Align: =Align.Center
+                Height: =DataCardKey29.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey29.Y
+                ZIndex: =4
+
+            RichTextEditor2 As richTextEditor:
+                Default: |-
+                    ="Hello" + EmailTemplate.Name + "!";
+                    
+                    "My name is Sender_Name. Writing you regarding Open role <Role_ID> for <Project_Name>.  Let me know if this role is still open, will be happy to jump on a call to discuss potential candidates"
+                Height: =169
+                Width: =551
+                X: =219
+                Y: =10
+                ZIndex: =5
+
+    Button13 As button:
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Cancel"
-        X: =551
-        Y: =680
-        ZIndex: =3
+        X: =468
+        Y: =663
+        ZIndex: =2
 
-    Button12 As button:
-        Fill: =RGBA(0, 134, 208, 1)
-        OnSelect: |-
-            =SubmitForm(Form5); Reset(Form5);
-             
+    Button14 As button:
+        OnSelect: =SubmitForm(Form6); ResetForm(Form6); Navigate(Home);
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Save"
-        X: =746
-        Y: =680
+        X: =703
+        Y: =663
+        ZIndex: =3
+
+    Label7 As label:
+        FontWeight: =FontWeight.Bold
+        Height: =41
+        Size: =24
+        Text: ="Create New Campaign"
+        Width: =450
+        X: =503
+        Y: =59
         ZIndex: =4
 
