--- a/app/Src/EditCampaign.fx.yaml
+++ b/app/Src/EditCampaign.fx.yaml
@@ -5,8 +5,8 @@ EditCampaign As screen:
         DefaultMode: =FormMode.New
         Item: =First(NewCampaign)
         NumberOfColumns: =1
-        Width: =803
-        X: =239
+        Width: =816
+        X: =225
         Y: =116
         ZIndex: =1
 
@@ -21,7 +21,7 @@ EditCampaign As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Title")
             Required: =true
             Update: =DataCardValue31.Text
-            Width: =803
+            Width: =816
             X: =0
             Y: =0
             ZIndex: =2
@@ -30,10 +30,10 @@ EditCampaign As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
+                Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10
+                Y: =10 + (DataCardValue31.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
             DataCardValue31 As text:
@@ -41,6 +41,7 @@ EditCampaign As screen:
                 Default: =Gallery1.Selected.Title
                 DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
+                Height: =37
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
@@ -48,9 +49,9 @@ EditCampaign As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey31.Y + DataCardKey31.Height + 5
+                Width: =580
+                X: =205
+                Y: =13
                 ZIndex: =2
 
             ErrorMessage31 As label:
@@ -89,7 +90,7 @@ EditCampaign As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Subject")
             Required: =false
             Update: =DataCardValue32.Text
-            Width: =803
+            Width: =816
             X: =0
             Y: =1
             ZIndex: =2
@@ -98,10 +99,10 @@ EditCampaign As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
+                Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10
+                Y: =10 + (DataCardValue32.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
             DataCardValue32 As text:
@@ -110,6 +111,7 @@ EditCampaign As screen:
                     =Gallery1.Selected.Subject
                 DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
+                Height: =37
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
@@ -117,9 +119,9 @@ EditCampaign As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey32.Y + DataCardKey32.Height + 5
+                Width: =578
+                X: =207
+                Y: =13
                 ZIndex: =2
 
             ErrorMessage32 As label:
@@ -158,7 +160,7 @@ EditCampaign As screen:
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Template")
             Required: =false
             Update: =DataCardValue33.Text
-            Width: =803
+            Width: =816
             X: =0
             Y: =2
             ZIndex: =2
@@ -167,10 +169,10 @@ EditCampaign As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
+                Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10
+                Y: =10 + (DataCardValue33.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
             DataCardValue33 As text:
@@ -179,6 +181,7 @@ EditCampaign As screen:
                     =Gallery1.Selected.Template
                 DelayOutput: =true
                 DisplayMode: =Parent.DisplayMode
+                Height: =37
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
@@ -186,9 +189,9 @@ EditCampaign As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey33.Y + DataCardKey33.Height + 5
+                Width: =575
+                X: =210
+                Y: =13
                 ZIndex: =2
 
             ErrorMessage33 As label:
@@ -216,76 +219,6 @@ EditCampaign As screen:
                 Y: =DataCardKey33.Y
                 ZIndex: =4
 
-        "'Message (html)_DataCard4' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Message_x0028_html_x0029_"
-            Default: =ThisItem.'Message (html)'
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Message_x0028_html_x0029_")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =147
-            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
-            Required: =false
-            Update: =DataCardValue34.Text
-            Width: =803
-            X: =0
-            Y: =3
-            ZIndex: =2
-
-            DataCardKey34 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                Wrap: =false
-                X: =30
-                Y: =10
-                ZIndex: =1
-
-            DataCardValue34 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: |
-                    =Gallery1.Selected.'Message (html)'
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                Height: =88
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey34.Y + DataCardKey34.Height + 5
-                ZIndex: =2
-
-            ErrorMessage34 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue34.Y + DataCardValue34.Height
-                ZIndex: =3
-
-            StarVisible34 As label:
-                Align: =Align.Center
-                Height: =DataCardKey34.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey34.Y
-                ZIndex: =4
-
         Attachments_DataCard6 As typedDataCard.attachmentsEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="{Attachments}"
@@ -296,25 +229,25 @@ EditCampaign As screen:
             Height: =50
             Required: =false
             Update: =DataCardValue35.Attachments
-            Width: =803
+            Width: =816
             X: =0
-            Y: =4
+            Y: =3
             ZIndex: =2
 
             DataCardKey35 As label:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
+                Width: =(Parent.Width - 60) * 0.4
                 Wrap: =false
                 X: =30
-                Y: =10
+                Y: =10 + (DataCardValue35.Height / 2) - (Self.Height / 2)
                 ZIndex: =1
 
             DataCardValue35 As attachments:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 DisplayMode: =Parent.DisplayMode
-                Height: =148
+                Height: =101
                 IsInDataCard: =true
                 Items: =Parent.Default
                 PaddingBottom: =5
@@ -322,9 +255,9 @@ EditCampaign As screen:
                 PaddingRight: =5
                 PaddingTop: =5
                 Tooltip: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey35.Y + DataCardKey35.Height + 5
+                Width: =573
+                X: =213
+                Y: =10
                 ZIndex: =2
 
             ErrorMessage35 As label:
@@ -350,6 +283,64 @@ EditCampaign As screen:
                 Wrap: =false
                 Y: =DataCardKey35.Y
                 ZIndex: =4
+
+        "'Message (html)_DataCard4' As typedDataCard.textualEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Message_x0028_html_x0029_"
+            Default: =ThisItem.'Message (html)'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"Message_x0028_html_x0029_")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =207
+            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
+            Required: =false
+            Update: =
+            Width: =816
+            X: =0
+            Y: =4
+            ZIndex: =2
+
+            DataCardKey34 As label:
+                Height: =45
+                Text: =Parent.DisplayName
+                Width: =147
+                Wrap: =false
+                X: =60
+                Y: =78
+                ZIndex: =1
+
+            ErrorMessage34 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =
+                ZIndex: =3
+
+            StarVisible34 As label:
+                Align: =Align.Center
+                Height: =DataCardKey34.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey34.Y
+                ZIndex: =4
+
+            RichTextEditor7 As richTextEditor:
+                Default: =Gallery1.Selected.'Message (html)'
+                Height: =182
+                Width: =579
+                X: =207
+                Y: =10
+                ZIndex: =5
 
     Label5 As label:
         FontWeight: =FontWeight.Bold
