--- a/app/Src/Home.fx.yaml
+++ b/app/Src/Home.fx.yaml
@@ -72,7 +72,7 @@ Home As screen:
 
     Button7 As button:
         Fill: =RGBA(0, 134, 208, 1)
-        OnSelect: =Remove(NewCampaign, Gallery1.Selected);Refresh(NewCampaign);
+        OnSelect: =Set(varShowPopup, true); Remove(NewCampaign, Gallery1.Selected);Refresh(NewCampaign);
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
@@ -103,4 +103,58 @@ Home As screen:
         X: =677
         Y: =627
         ZIndex: =5
+
+    Rectangle1 As rectangle:
+        Fill: =RGBA(204, 231, 246, 1)
+        Height: =666
+        Visible: =varShowPopup
+        Width: =1294
+        X: =40
+        Y: =40
+        ZIndex: =6
+
+    Rectangle2 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =328
+        Visible: =varShowPopup
+        Width: =688
+        X: =339
+        Y: =182
+        ZIndex: =7
+
+    Label8 As label:
+        Height: =92
+        Size: =24
+        Text: ="Are you sure you want to delete the campaign?"
+        Visible: =varShowPopup
+        Width: =526
+        X: =420
+        Y: =237
+        ZIndex: =8
+
+    Button16 As button:
+        Fill: =RGBA(0, 134, 208, 1)
+        OnSelect: =Set(varShowPopup, false);
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Close"
+        Visible: =varShowPopup
+        X: =504
+        Y: =399
+        ZIndex: =9
+
+    Button17 As button:
+        Fill: =RGBA(0, 134, 208, 1)
+        OnSelect: =Set(varShowPopup, false); Remove(NewCampaign, Gallery1.Selected);Refresh(NewCampaign);
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Delete"
+        Visible: =varShowPopup
+        X: =706
+        Y: =399
+        ZIndex: =10
 
