--- a/app/Src/TestPreview.fx.yaml
+++ b/app/Src/TestPreview.fx.yaml
@@ -1,20 +1,20 @@
 TestPreview As screen:
 
-    Label1 As label:
-        Text: ="Source"
-        X: =40
-        Y: =40
-        ZIndex: =1
-
-    Label9 As label:
-        Text: ="Text"
-        X: =60
-        Y: =60
+    Source As label:
+        Height: =75
+        Text: ="<p>We've&nbsp;done an unusually &quot;deep&quot; globalization and localization.<p>"
+        Visible: =false
+        Width: =1018
+        X: =64
+        Y: =172
         ZIndex: =2
 
-    Label10 As label:
-        Text: ="Text"
-        X: =80
-        Y: =80
+    HtmlText2 As htmlViewer:
+        Height: =111
+        HtmlText: |
+            =Source.Text
+        Width: =482
+        X: =88
+        Y: =284
         ZIndex: =3
 
